[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/main_container/left_container/export/folder_path/FolderPath.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/main_container/left_container/export/container.gd" type="Script" id=2]
[ext_resource path="res://images/icon_file_type_csv.svg" type="Texture" id=3]
[ext_resource path="res://scenes/main_container.tres" type="Theme" id=4]
[ext_resource path="res://scenes/main_container/left_container/export/export.gd" type="Script" id=5]
[ext_resource path="res://scenes/utility/python_watcher/PythonWatcher.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/main_container/left_container/export/table/Table.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/main_container/left_container/export/connection_path/ConnectionPath.tscn" type="PackedScene" id=8]
[ext_resource path="res://images/icon_signals.svg" type="Texture" id=9]

[node name="Export" type="WindowDialog"]
margin_right = 460.0
margin_bottom = 515.0
theme = ExtResource( 4 )
popup_exclusive = true
window_title = "Export Window"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainPath" type="HBoxContainer" parent="Container"]
margin_right = 460.0
margin_bottom = 24.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Container/MainPath"]
margin_left = 135.0
margin_top = 1.0
margin_right = 200.0
margin_bottom = 23.0
text = "Export to"

[node name="Target" type="OptionButton" parent="Container/MainPath"]
margin_left = 204.0
margin_right = 324.0
margin_bottom = 24.0
text = "Connection"
icon = ExtResource( 9 )
flat = true
items = [ "Connection", ExtResource( 9 ), false, 0, false, "File", ExtResource( 3 ), false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectionPath" parent="Container" instance=ExtResource( 8 )]

[node name="FolderPath" parent="Container" instance=ExtResource( 1 )]
visible = false

[node name="TableBG" type="ColorRect" parent="Container"]
margin_top = 54.0
margin_right = 460.0
margin_bottom = 489.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.12549, 0.141176, 0.192157, 1 )

[node name="TableContainer" type="VBoxContainer" parent="Container/TableBG"]
anchor_right = 1.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Table" parent="Container/TableBG/TableContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
margin_right = 460.0
margin_bottom = 50.0

[node name="Action" type="HBoxContainer" parent="Container"]
margin_top = 493.0
margin_right = 460.0
margin_bottom = 515.0
alignment = 2

[node name="Start" type="Button" parent="Container/Action"]
margin_left = 361.0
margin_right = 402.0
margin_bottom = 22.0
text = "Start"

[node name="Cancel" type="Button" parent="Container/Action"]
margin_left = 406.0
margin_right = 460.0
margin_bottom = 22.0
text = "Cancel"

[node name="PythonWatcher" parent="." instance=ExtResource( 6 )]

[node name="PythonWatcher2" parent="." instance=ExtResource( 6 )]

[connection signal="item_selected" from="Container/MainPath/Target" to="." method="_on_Target_item_selected"]
[connection signal="database_selected" from="Container/ConnectionPath" to="." method="_on_ConnectionPath_database_selected"]
[connection signal="draw" from="Container/ConnectionPath" to="Container" method="_on_ConnectionPath_draw"]
[connection signal="dir_selected" from="Container/FolderPath" to="." method="_on_FolderPath_dir_selected"]
[connection signal="draw" from="Container/FolderPath" to="Container" method="_on_FolderPath_draw"]
[connection signal="pressed" from="Container/Action/Start" to="." method="_on_Start_pressed"]
[connection signal="output" from="PythonWatcher" to="." method="_on_PythonWatcher_output"]
